fix distribuição de vendas; add documento fiscal to openapi
